@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>ch.rootlogin.godocstore</groupId>
@@ -8,11 +10,11 @@
     <packaging>jar</packaging>
 
     <properties>
+        <jdk.version>11</jdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>10</maven.compiler.source>
-        <maven.compiler.target>10</maven.compiler.target>
-        <log4j.version>2.11.1</log4j.version>
         <sonar.projectKey>chrootlogin_go-docstore-viewer</sonar.projectKey>
+        <!-- DEPENDENCIES -->
+        <log4j.version>2.11.1</log4j.version>
         <httpclient.version>4.5.6</httpclient.version>
         <httpasyncclient.version>4.1.4</httpasyncclient.version>
         <slf4j.version>1.7.25</slf4j.version>
@@ -21,19 +23,17 @@
         <commonsio.version>2.6</commonsio.version>
         <unirest.version>1.4.9</unirest.version>
         <gson.version>2.8.5</gson.version>
-        <guice.version>4.2.0</guice.version>
+        <guice.version>4.2.1</guice.version>
         <sqlite.version>3.23.1</sqlite.version>
+        <openjfx.version>11</openjfx.version>
     </properties>
 
-    <scm>
-        <connection>scm:git:git@github.com:chrootlogin/go-docstore-viewer.git</connection>
-        <developerConnection>scm:git:git@github.com:chrootlogin/go-docstore-viewer.git</developerConnection>
-        <url>https://github.com/chrootlogin/go-docstore-viewer</url>
-        <tag>HEAD</tag>
-    </scm>
-
-    <name>Go-Docstore Viewer</name>
     <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-fxml</artifactId>
+            <version>${openjfx.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-api</artifactId>
@@ -55,21 +55,6 @@
             <version>${unirest.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpclient</artifactId>
-            <version>${httpclient.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpasyncclient</artifactId>
-            <version>${httpasyncclient.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.httpcomponents</groupId>
-            <artifactId>httpmime</artifactId>
-            <version>${httpclient.version}</version>
-        </dependency>
-        <dependency>
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
@@ -79,6 +64,17 @@
             <artifactId>gson</artifactId>
             <version>${gson.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.inject</groupId>
+            <artifactId>guice</artifactId>
+            <version>${guice.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial</groupId>
+            <artifactId>sqlite-jdbc</artifactId>
+            <version>${sqlite.version}</version>
+        </dependency>
+        <!-- TEST -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -91,17 +87,8 @@
             <version>${commonsio.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.google.inject</groupId>
-            <artifactId>guice</artifactId>
-            <version>${guice.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial</groupId>
-            <artifactId>sqlite-jdbc</artifactId>
-            <version>${sqlite.version}</version>
-        </dependency>
     </dependencies>
+
     <build>
         <sourceDirectory>src/main/java</sourceDirectory>
         <resources>
@@ -121,14 +108,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>${maven.compiler.source}</source>
-                    <target>${maven.compiler.target}</target>
-                    <compilerArgs>
-                        <arg>--add-modules=javafx.base</arg>
-                        <arg>--add-modules=javafx.fxml</arg>
-                        <arg>--add-modules=javafx.graphics</arg>
-                        <arg>--add-modules=javafx.controls</arg>
-                    </compilerArgs>
+                    <source>${jdk.version}</source>
+                    <target>${jdk.version}</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -158,7 +139,7 @@
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>ch.rootlogin.godocstore.viewer.Main</mainClass>
+                                    <mainClass>ch.rootlogin.godocstore.viewer.MainApplication</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -178,7 +159,7 @@
                 <artifactId>launch4j-maven-plugin</artifactId>
                 <executions>
                     <execution>
-                        <id>l4j-gui</id>
+                        <id>l4j-ch.rootlogin.godocstore.viewer.gui</id>
                         <phase>package</phase>
                         <goals>
                             <goal>launch4j</goal>
@@ -232,14 +213,4 @@
             </plugin>
         </plugins>
     </build>
-    <distributionManagement>
-        <snapshotRepository>
-            <id>nexus-snapshots</id>
-            <url>https://bin.dini-mueter.net/repository/maven.snapshots/</url>
-        </snapshotRepository>
-        <repository>
-            <id>nexus-releases</id>
-            <url>https://bin.dini-mueter.net/repository/maven.releases/</url>
-        </repository>
-    </distributionManagement>
 </project>
